# robospect_common

./: LICENSE  README.md
crane_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crane_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robospect.srdf
crane_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pa10_description/: CMakeLists.txt  package.xml
pa10_description/launch/: pa10_robot_description.launch.old  pa10_rviz.launch
pa10_description/srdf/: pa10_kalman.srdf
pa10_description/urdf/: pa10.urdf.xacro
pa10_description/urdf/meshes/: kinect.dae
robospect_common/: CMakeLists.txt  package.xml
robospect_description/: CMakeLists.txt  package.xml
robospect_description/launch/: crane_rviz.launch  load_description.launch  robospect.rviz  robospect_rviz.launch  robospect_state_robot.launch
robospect_description/meshes/: capturas genie simpl.docx
robospect_description/meshes/bases/: Antebrazo extensible R.STL  CHAPA U R.STL  PanTilt_a.STL  PanTilt_a.dae  PanTilt_b.STL  PanTilt_b.dae  PanTilt_c.STL  PanTilt_c.dae  larguero cesta R.STL  robospect_base_chassis.STL  robospect_base_chassis.dae  robospect_chassis.stl  robospect_chassis_kms.stl  robospect_crane_1.stl  robospect_fifth.STL  robospect_fifth.dae  robospect_first.STL  robospect_first.dae  robospect_fourth.STL  robospect_fourth.dae  robospect_head.STL  robospect_head.dae  robospect_second.STL  robospect_second.dae  robospect_seventh.STL  robospect_seventh.dae  robospect_sixth.STL  robospect_sixth.dae  robospect_third.STL  robospect_third.dae  tip_support.STL
robospect_description/meshes/crane/: brazo extensible R.STL  carcasa fibra.STL  placa superior R.STL
robospect_description/meshes/wheels/: robospect_wheel_l.STL  robospect_wheel_l.dae  robospect_wheel_r.STL  robospect_wheel_r.dae
robospect_description/robots/: crane.urdf.xacro  crane_v2.urdf.xacro  robospect.urdf.xacro  robospect_v2.urdf.xacro
robospect_description/urdf/bases/: camera_frame_top_v1.urdf.xacro  camera_frame_v1.urdf.xacro  camera_frame_v2.urdf.xacro  ptu_frame_v1.urdf.xacro  robospect_base.gazebo.xacro  robospect_base.urdf.xacro  robospect_crane.gazebo.xacro  robospect_crane.urdf.xacro  robospect_crane_v2.urdf.xacro  robospect_crane_v3.urdf.xacro
robospect_description/urdf/sensors/: pointgrey_grasshopper3.urdf.xacro
robospect_description/urdf/wheels/: standard_wheel.urdf.xacro  suspension_wheel.urdf.xacro
robospect_laser_assembler/: CMakeLists.txt  package.xml
robospect_laser_assembler/src/: robospect_laser_assembler_node.py
robospect_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robospect_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robospect.srdf  sensor_hokuyo.yaml
robospect_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_rtc.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_rtc.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robospect_moveit_controller_manager.launch  robospect_moveit_sensor_manager.launch  run_benchmark_ompl.launch  sensor_manager.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch
robospect_msgs/: CMakeLists.txt  package.xml
robospect_msgs/msg/: ControlState.msg  MissionCommand.msg  MissionPoint.msg  MissionState.msg  PadStatus.msg  PlatformCommand.msg  PlatformResult.msg  PlatformState.msg  State.msg
robospect_msgs/srv/: GetStereo.srv  MissionCommandSrv.srv  PlatformCommandSrv.srv  ScanProfile.srv  SetControlMode.srv
robospect_pad/: CMakeLists.txt  package.xml
robospect_pad/launch/: ps3.yaml  robospect_pad.launch
robospect_pad/src/: robospect_pad.cpp
