<?xml version="1.0"?>
<package>
  <name>robospect_msgs</name>
  <version>0.1.0</version>
  <description>The robospect_msgs package</description>

  <maintainer email="dcarbonell@robotnik.es">dcarbonell</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
